# 3x3_grid_ar_detection

./: .gitignore  AR定位九宫格系统使用指南.md  PARAMETER_ANALYSIS.md  issues.md  next.md  readme.md  understand.md
.marscode/: deviceInfo.json
FAST_LIVO2_ROS2_relocation_ultra/: RELOCATION_BUG.md  build_each_package.sh  example.launch.py  example_gicp.launch.py  example_teaser_gicp.launch.py  example_teaserpp.launch.py
ar_calculate/: IMAGE_CALLBACK_ANNOTATIONS_GUIDE.md  METHOD_B_QUICK_REFERENCE.md  START_GUIDE.md  d435.json  nine_grid_calibration_137_20260321_214343.json  nine_grid_calibration_137_20260322_132126.json  nine_grid_points.yaml  record_lidar_poses.py  start_all.sh
ar_calculate/src/ar_grid_detector/: CMakeLists.txt  FISHEYE_QUICK_REF.md  README.md  package.xml  setup.py  鱼眼模型九宫格畸变投影详解.md
ar_calculate/src/ar_grid_detector/ar_grid_detector_py/: __init__.py  ar_grid_node.py  camera_models.py  grid_generator.py  utils.py
ar_calculate/src/ar_grid_detector/config/: ar_grid.params.yaml  ar_grid_fisheye_180.params.yaml
ar_calculate/src/ar_grid_detector/launch/: ar_grid.launch.py  ar_grid_fisheye.launch.py
ar_calculate/src/ar_grid_detector/msg/: GridCell.msg  GridCellArray.msg
ar_calculate/src/ar_grid_detector/scripts/: fisheye_calibration_tool.py
old_files/: FISHEYE_COMPLETE_SETUP.md  FISHEYE_USB_QUICK_START.md  ar_overlay.launch.py  ar_overlay.params.yaml  ar_overlay_node.py  calibrate_fisheye_180.py  calibrate_nine_grid.py  nine_grid.py  nine_grid_input_template_unified.json  nine_grid_input_template_unified_points.yaml  start_all_with_offset.sh  鱼眼相机标定完整指南.md
(+11 files in other folders)
